* [Bug] #ErrorCount was being partially hidden on IE6.

--- a/css/layout.css
+++ b/css/layout.css
@@ -77,7 +77,13 @@ tbody th {
 	border-radius: 15px;
 }
 
+#ErrorCountPositioner {
+	z-index: 100;
+	position: relative;
+}
+
 #ErrorCount {
+	display: none;
 	position: absolute;
 	z-index: 100;
 	top: -8px;
